--- a/container/pom.xml
+++ b/container/pom.xml
@@ -25,6 +25,21 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		<!-- TEST -->
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
