--- a/hellospring04/pom.xml
+++ b/hellospring04/pom.xml
@@ -96,7 +96,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
-					<url>http://192.168.1.109:8080/manager/html</url>
+					<url>http://192.168.1.109:8080/manager/text</url>
 					<path>/hellospring04</path>
 					<username>admin</username>
 					<password>admin</password>
