--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,6 @@
 		<module>aoptest</module>
 		<module>container</module>
 		<module>hellospring04</module>
+		<module>hellospring05</module>
 	</modules>
 </project>
