--- a/hellospring03/pom.xml
+++ b/hellospring03/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>spring-practices</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>hellospring</artifactId>
+	<artifactId>hellospring03</artifactId>
 
 	<packaging>war</packaging>
 
@@ -101,7 +101,7 @@
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
 					<url>http://192.168.1.109:8080/manager/text</url>
-					<path>/hellospring</path>
+					<path>/hellospring03</path>
 					<username>admin</username>
 					<password>admin</password>
 				</configuration>
