--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>pom</packaging>
 	
 	<modules>
-		<module>hellospring</module>
+		<module>hellospring03</module>
 		<module>guestbook03</module>
 		<module>fileupload</module>
 		<module>logex</module>
