--- a/hellospring06/src/main/resources/application.properties
+++ b/hellospring06/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.profile.active=develope
 
-# Server
+# server
 server.port=8081
 
 # devtools
 spring.devtools.livereload.enabled=true
 
-# spring mvc
+# sping mvc
 spring.mvc.servlet.path=/
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -18,9 +18,12 @@ spring.http.encoding.forced=true
 spring.http.encoding.forced-request=true
 spring.http.encoding.forced-response=true
 
-# mybatis
-# logging
-# multipart
-# Internationalization(message resource)
-# aop
-# security
+
+#multipart
+#Internationalization(message resuorce)
+
+#datasource
+#mybatis
+
+#logging
+#AOP
